package src.main;

public abstract class interaction {
    Player player;
    NPC npc;
    abstract void interact();
    abstract void interrupt();
}
